// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownAutoCompleteMenu renders with a group 1`] = `
<DropdownAutoCompleteMenu
  blendCorner={true}
  emptyMessage="No items"
  isOpen={true}
  items={
    Array [
      Object {
        "id": "countries",
        "items": Array [
          Object {
            "label": <div>
              New Zealand
            </div>,
            "value": "new zealand",
          },
          Object {
            "label": <div>
              Australia
            </div>,
            "value": "australia",
          },
        ],
        "label": "countries",
        "value": "countries",
      },
    ]
  }
  maxHeight={300}
  onSelect={[Function]}
  searchPlaceholder="Filter search"
>
  <AutoComplete
    closeOnSelect={true}
    disabled={false}
    inputIsActor={false}
    isOpen={true}
    itemToString={[Function]}
    onSelect={[Function]}
    resetInputOnClose={true}
    shouldSelectWithEnter={true}
    shouldSelectWithTab={false}
  >
    <DropdownMenu
      closeOnEscape={true}
      isOpen={true}
      keepMenuOpen={false}
      onClickOutside={[Function]}
    >
      <AutoCompleteRoot>
        <Component
          className="css-6v04yn-AutoCompleteRoot ejumqxq0"
        >
          <div
            className="css-6v04yn-AutoCompleteRoot ejumqxq0"
          >
            Click Me!
            <BubbleWithMinWidth
              blendCorner={true}
              innerRef={[Function]}
              onClick={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <div
                className="css-1w57aoy-DropdownBubble-getMenuBorderRadius-BubbleWithMinWidth ejumqxq11"
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                <StyledInputWrapper>
                  <div
                    className="css-3qvqqu-StyledInputWrapper ejumqxq2"
                  >
                    <StyledInput
                      autoFocus={true}
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      placeholder="Filter search"
                      value=""
                    >
                      <input
                        autoFocus={true}
                        className="css-w10g4i-Input-inputStyles-StyledInput ejumqxq3"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        placeholder="Filter search"
                        value=""
                      />
                    </StyledInput>
                    <InputLoadingWrapper>
                      <div
                        className="css-kha9qr-InputLoadingWrapper ejumqxq1"
                      />
                    </InputLoadingWrapper>
                  </div>
                </StyledInputWrapper>
                <div>
                  <StyledItemList
                    data-test-id="autocomplete-list"
                    maxHeight={300}
                  >
                    <div
                      className="css-5kh8cy-StyledItemList ejumqxq8"
                      data-test-id="autocomplete-list"
                    >
                      <LabelWithBorder
                        key="countries"
                      >
                        <div
                          className="css-1lqzols-LabelWithBorder ejumqxq5"
                        >
                          <GroupLabel>
                            <div
                              className="css-1oz0skv-GroupLabel ejumqxq7"
                            >
                              countries
                            </div>
                          </GroupLabel>
                        </div>
                      </LabelWithBorder>
                      <AutoCompleteItem
                        highlightedIndex={0}
                        index={0}
                        key="new zealand-0"
                        onClick={[Function]}
                      >
                        <div
                          className="css-ahi473-AutoCompleteItem ejumqxq4"
                          onClick={[Function]}
                        >
                          <div>
                            New Zealand
                          </div>
                        </div>
                      </AutoCompleteItem>
                      <AutoCompleteItem
                        highlightedIndex={0}
                        index={1}
                        key="australia-1"
                        onClick={[Function]}
                      >
                        <div
                          className="css-4bvl26-AutoCompleteItem ejumqxq4"
                          onClick={[Function]}
                        >
                          <div>
                            Australia
                          </div>
                        </div>
                      </AutoCompleteItem>
                    </div>
                  </StyledItemList>
                </div>
              </div>
            </BubbleWithMinWidth>
          </div>
        </Component>
      </AutoCompleteRoot>
    </DropdownMenu>
  </AutoComplete>
</DropdownAutoCompleteMenu>
`;

exports[`DropdownAutoCompleteMenu renders without a group 1`] = `
<DropdownAutoCompleteMenu
  blendCorner={true}
  emptyMessage="No items"
  isOpen={true}
  items={
    Array [
      Object {
        "label": <div>
          Apple
        </div>,
        "value": "apple",
      },
      Object {
        "label": <div>
          Bacon
        </div>,
        "value": "bacon",
      },
      Object {
        "label": <div>
          Corn
        </div>,
        "value": "corn",
      },
    ]
  }
  maxHeight={300}
  onSelect={[Function]}
  searchPlaceholder="Filter search"
>
  <AutoComplete
    closeOnSelect={true}
    disabled={false}
    inputIsActor={false}
    isOpen={true}
    itemToString={[Function]}
    onSelect={[Function]}
    resetInputOnClose={true}
    shouldSelectWithEnter={true}
    shouldSelectWithTab={false}
  >
    <DropdownMenu
      closeOnEscape={true}
      isOpen={true}
      keepMenuOpen={false}
      onClickOutside={[Function]}
    >
      <AutoCompleteRoot>
        <Component
          className="css-6v04yn-AutoCompleteRoot ejumqxq0"
        >
          <div
            className="css-6v04yn-AutoCompleteRoot ejumqxq0"
          >
            Click Me!
            <BubbleWithMinWidth
              blendCorner={true}
              innerRef={[Function]}
              onClick={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <div
                className="css-1w57aoy-DropdownBubble-getMenuBorderRadius-BubbleWithMinWidth ejumqxq11"
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                <StyledInputWrapper>
                  <div
                    className="css-3qvqqu-StyledInputWrapper ejumqxq2"
                  >
                    <StyledInput
                      autoFocus={true}
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      placeholder="Filter search"
                      value=""
                    >
                      <input
                        autoFocus={true}
                        className="css-w10g4i-Input-inputStyles-StyledInput ejumqxq3"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        placeholder="Filter search"
                        value=""
                      />
                    </StyledInput>
                    <InputLoadingWrapper>
                      <div
                        className="css-kha9qr-InputLoadingWrapper ejumqxq1"
                      />
                    </InputLoadingWrapper>
                  </div>
                </StyledInputWrapper>
                <div>
                  <StyledItemList
                    data-test-id="autocomplete-list"
                    maxHeight={300}
                  >
                    <div
                      className="css-5kh8cy-StyledItemList ejumqxq8"
                      data-test-id="autocomplete-list"
                    >
                      <AutoCompleteItem
                        highlightedIndex={0}
                        index={0}
                        key="apple-0"
                        onClick={[Function]}
                      >
                        <div
                          className="css-ahi473-AutoCompleteItem ejumqxq4"
                          onClick={[Function]}
                        >
                          <div>
                            Apple
                          </div>
                        </div>
                      </AutoCompleteItem>
                      <AutoCompleteItem
                        highlightedIndex={0}
                        index={1}
                        key="bacon-1"
                        onClick={[Function]}
                      >
                        <div
                          className="css-4bvl26-AutoCompleteItem ejumqxq4"
                          onClick={[Function]}
                        >
                          <div>
                            Bacon
                          </div>
                        </div>
                      </AutoCompleteItem>
                      <AutoCompleteItem
                        highlightedIndex={0}
                        index={2}
                        key="corn-2"
                        onClick={[Function]}
                      >
                        <div
                          className="css-4bvl26-AutoCompleteItem ejumqxq4"
                          onClick={[Function]}
                        >
                          <div>
                            Corn
                          </div>
                        </div>
                      </AutoCompleteItem>
                    </div>
                  </StyledItemList>
                </div>
              </div>
            </BubbleWithMinWidth>
          </div>
        </Component>
      </AutoCompleteRoot>
    </DropdownMenu>
  </AutoComplete>
</DropdownAutoCompleteMenu>
`;

exports[`DropdownAutoCompleteMenu selects 1`] = `[MockFunction]`;
